--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               <i class="material-icons">menu</Menu></i>
           </span>
         
-      <a href="FF_index.html" class="logo"><img src="logos/logo3.svg" alt="" style="height: 2em; width:7em;"/>
+      <a href="#" class="logo"><img src="logos/logo3.svg" alt="" style="height: 2em; width:7em;"/>
       </a>
       <ul class="main-nav" id="js-menu">
         <li><a href="#" class="nav-links">Home</a></li>
