--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <a href="#" class="logo"><img src="Logos/logo3.svg" alt="" style="height: 2em; width:7em;"/>
       </a>
       <ul class="main-nav" id="js-menu">
-        <li><a href="#" class="nav-links">Home</a></li>
-        <li><a href="#" class="nav-links">Locations</a></li>
+        <li><a href="index.html" class="nav-links">Home</a></li>
+        <li><a href="Locations.html" class="nav-links">Locations</a></li>
         <li><a href="#" class="nav-links">Shop</a></li>        
         <li><a href="#" class="nav-links">About Us</a></li>
         <li><a href="#" class="nav-links">Contact Us</a></li>
@@ -40,7 +40,7 @@
 
             <img src="images/pexels_helena_lopes_933964.png" alt="" class="hero-img">
             <div class="button-position">
-            <a href="#" class="hero-button">COME MEET US</a>
+            <a href="Locations.html" class="hero-button">COME MEET US</a>
         </div>
         </div>
     </div>
@@ -145,8 +145,8 @@
         </div>
         <ul style="list-style-type: none;width: 26vw; margin-left: auto;margin-right: auto;">
             
-            <li><a href="#" class="foot-links">Home</a></li>
-            <li><a href="#" class="foot-links">Locations</a></li>
+            <li><a href="index.html" class="foot-links">Home</a></li>
+            <li><a href="Locations.html" class="foot-links">Locations</a></li>
             <li><a href="#" class="foot-links">Shop</a></li>        
             <li><a href="#" class="foot-links">About Us</a></li>
             <li><a href="#" class="foot-links">Contact Us</a></li>
